--- a/local.yml
+++ b/local.yml
@@ -12,9 +12,7 @@ services:
         - static_volume:/app/staticfiles
         - media_volume:/app/mediafiles
     expose:
-        - "8000:8000"
-    ports:
-        - "8000:8000"
+        - "8000"
     env_file:
         - ./.envs/.local/.django
         - ./.envs/.local/.postgres
@@ -45,6 +43,20 @@ services:
       networks:
           - authors-api-live
 
+  nginx:
+        restart: always
+        depends_on:
+            - api
+        volumes:
+            - static_volume:/app/staticfiles
+            - media_volume:/app/mediafiles
+        build:
+            context: ./docker/local/nginx
+            dockerfile: Dockerfile
+        ports:
+            - "8080:80"
+        networks:
+            - authors-api-live
 
 
 networks:
