prod: Setup Django

--- a/docker/production/django/Dockerfile
+++ b/docker/production/django/Dockerfile
@@ -3,7 +3,7 @@ ARG PYTHON_VERSION=3.10.5-slim-bullseye
 FROM python:${PYTHON_VERSION} as python
 
 FROM python as python-build-stage
-ARG BUILD_ENVIRONMENT=local
+ARG BUILD_ENVIRONMENT=production
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
    build-essential \
@@ -17,7 +17,7 @@ RUN pip wheel --wheel-dir /usr/src/app/wheels \
 
 FROM python as python-run-stage
 
-ARG BUILD_ENVIRONMENT=local
+ARG BUILD_ENVIRONMENT=production
 ARG APP_HOME=/app
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -28,9 +28,12 @@ ENV BUILD_ENV ${BUILD_ENVIRONMENT}
 
 WORKDIR ${APP_HOME}
 
+RUN addgroup --system django \
+   && adduser --system --ingroup django django
+
 RUN apt-get update && apt-get install --no-install-recommends -y \
     libpq-dev \
-    gettext \
+    gettext netcat\
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && rm -rf /var/lib/apt/lists/*
 
@@ -40,23 +43,26 @@ COPY --from=python-build-stage /usr/src/app/wheels /wheels/
 RUN pip install --no-cache-dir --no-index --find-links=/wheels/ /wheels/* \
    && rm -rf /wheels/
 
-COPY ./docker/local/django/entrypoint /entrypoint
+COPY --chown=django:django ./docker/production/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-COPY ./docker/local/django/start /start
+COPY  --chown=django:django ./docker/production/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
-COPY ./docker/local/django/celery/worker/start /start-celeryworker
+COPY  --chown=django:django ./docker/production/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r$//g' /start-celeryworker
 RUN chmod +x /start-celeryworker
 
-COPY ./docker/local/django/celery/flower/start /start-flower
+COPY ./docker/production/django/celery/flower/start /start-flower
 RUN sed -i 's/\r$//g' /start-flower
 RUN chmod +x /start-flower
 
-COPY . ${APP_HOME}
+COPY  --chown=django:django . ${APP_HOME}
+
+RUN chown django:django ${APP_HOME}
+
+USER django
 
 ENTRYPOINT ["/entrypoint"]
-
